WB-173: refactored preScout classes and updated priority groups